Updates java 11